# webagent_for_share

./: .gitignore  pyproject.toml  test_browser.py
proposal_result/www.uniqlo.com_us_en__20260205_220337/: acc_tree.txt  result.json
proposal_result/www.zillow.com__20260205_215659/: acc_tree.txt  result.json
refine_result/www.uniqlo.com_us_en__refiner_20260206_160651/: result.json
refine_result/www.zillow.com__refiner_20260206_162732/: result.json
train/: comparisonAgent.py  contextExtractionAgent.py
traj_gen/: InfoExtractor.py  SharedContext.py  __init__.py  base_exploration_agent.py  browser_env.py  exploration_proposal_agent.py  exploration_refiner_agent.py  exploration_verifier_agent.py  llm_utils.py  parsing_utils.py  processors.py  run_unified_explorer.py  set_of_mark.py  unified_explorer.py
traj_gen/legacy_results/original_explorer_output/: html_0.html  html_2.html  html_3.html  html_4.html  html_5.html  html_6.html  task_trajectory_data.json
traj_gen/legacy_results/output/: html_0.html  html_1.html  html_2.html  html_4.html  html_5.html  html_6.html  html_7.html  html_8.html  html_9.html  task_trajectory_data.json
traj_gen/legacy_results/output1/: html_0.html  html_1.html  html_2.html  html_3.html  html_4.html  html_5.html  html_6.html  html_7.html  html_8.html  html_9.html  task_trajectory_data.json
traj_gen/original_agents/: captcha_detection_agent.py  comparison_task_agent.py  main.py  sequential_task_agent.py  task_proposal_agent.py  task_refiner_agent.py  task_summarization_flow.py  trajectory_verifier.py
(+28 files in other folders)
